--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bankapp
 # MySQL Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/bankdb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://3.110.105.240:3306/bankdb?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Test@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
