--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=bankapp
 # MySQL Database configuration
-spring.datasource.url=jdbc:mysql://3.110.105.240:3306/bankdb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/corporateproject-mysql
 spring.datasource.username=root
 spring.datasource.password=Test@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # JPA & Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
