--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=bankapp
 # MySQL Database configuration
-spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/corporateproject_db
-spring.datasource.username=root
-spring.datasource.password=Test@123
+spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/CorporateProject_db
+spring.datasource.username=admin
+spring.datasource.password=Test@123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
