--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.datasource.username=admin
 spring.datasource.password=Test@123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.platform=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.hikari.connection-timeout=30000  # Adjust timeout if needed
+spring.datasource.hikari.maximum-pool-size=10  # Adjust pool size if needed
 
 # JPA & Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
