--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,3 +8,8 @@ spring:
       connection-timeout: 30000  # Adjust timeout if needed
       max-lifetime: 1800000
 
+jpa:
+    hibernate:
+      ddl-auto: update  # Or validate or create if needed
+    properties:
+      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect  # Add this line
