--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,8 @@ spring:
       max-lifetime: 1800000
 
 jpa:
-    hibernate:
-      ddl-auto: update  # Or validate or create if needed
     properties:
-      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect  # Add this line
+      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
