--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,11 @@
                         <artifactId>h2</artifactId>
                         <scope>test</scope>
                  </dependency>
-
+                 <dependency>
+                       <groupId>org.testcontainers</groupId>
+                       <artifactId>mysql</artifactId>
+                       <scope>test</scope>
+                </dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
