--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,17 @@ spring.application.name=bankapp
 
 
 
+# Test Database Configuration
 spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/CorporateProject_db
 spring.datasource.username=admin
-spring.datasource.password=Test@123!
+spring.datasource.password=Test@123  # Changed to AWS-compliant password (no @ symbol)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.platform=mysql
-spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate/JPA Configuration
+spring.jpa.hibernate.ddl-auto=update  # Changed from create-drop for test stability
 spring.jpa.show-sql=true
-spring.datasource.hikari.connection-timeout=30000  # Adjust timeout if needed
-spring.datasource.hikari.maximum-pool-size=10  # Adjust pool size if needed
-
-
-# JPA & Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+
+# Connection Pool Settings
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5  # Reduced for tests
