--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,10 @@ spring.application.name=bankapp
 
 
 
-# Test Database Configuration
+
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/CorporateProject_db
 spring.datasource.username=admin
-spring.datasource.password=Test@123  # Changed to AWS-compliant password (no @ symbol)
+spring.datasource.password=Test@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Hibernate/JPA Configuration
-spring.jpa.hibernate.ddl-auto=update  # Changed from create-drop for test stability
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# Connection Pool Settings
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=5  # Reduced for tests
-
-# Disable features not needed for tests
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.jpa.show-sql: true
