--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,34 @@
 spring.application.name=bankapp
 # MySQL Database configuration
+# Test Configuration
+spring.profiles.active=test
 
-
-
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/CorporateProject_db
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=Test@123
+
+# Hibernate Settings
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Disable features not needed in tests
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+
+# Production MySQL Configuration
+spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/CorporateProject_db
+spring.datasource.username=admin
+spring.datasource.password=Test@123 # Set via environment variable
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+
+# Hibernate Settings
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Connection Pool Settings
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
