--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,41 @@
+# Application Basics
 spring.application.name=bankapp
-# MySQL Database configuration
-# Test Configuration
 spring.profiles.active=test
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
+# ===============================
+# TEST CONFIGURATION (H2 with PostgreSQL compatibility)
+# ===============================
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=Test@123
 
-# Hibernate Settings
+# Hibernate Settings for H2
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=pg
 
-# Disable features not needed in tests
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
-
-# Production MySQL Configuration
-spring.datasource.url=jdbc:mysql://corporateproject-mysql.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:3306/CorporateProject_db
+# ===============================
+# PRODUCTION POSTGRESQL CONFIGURATION
+# ===============================
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://your-postgresql-host:5432/CorporateProject_db?sslmode=require
 spring.datasource.username=admin
-spring.datasource.password=Test@123 # Set via environment variable
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=Test@123 # Set via environment variable in production
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate Settings
+# Hibernate Settings for PostgreSQL
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Connection Pool Settings
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=2000000
+
+# Disable features not needed in tests
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
