--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine=pg
 # PRODUCTION POSTGRESQL CONFIGURATION
 # ===============================
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://your-postgresql-host:5432/CorporateProject_db?sslmode=require
+spring.datasource.url=jdbc:postgresql://corporateproject-postgres.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:5432/CorporateProject_db?sslmode=require
 spring.datasource.username=admin
 spring.datasource.password=Test@123 # Set via environment variable in production
 spring.datasource.driver-class-name=org.postgresql.Driver
