--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,41 +1,27 @@
 # Application Basics
 spring.application.name=bankapp
-spring.profiles.active=test
 
 # ===============================
-# TEST CONFIGURATION (H2 with PostgreSQL compatibility)
+# AWS RDS PostgreSQL Configuration
 # ===============================
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=Test@123
-
-# Hibernate Settings for H2
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=pg
-
-# ===============================
-# PRODUCTION POSTGRESQL CONFIGURATION
-# ===============================
-# PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://corporateproject-postgres.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:5432/CorporateProject_db?sslmode=require
-spring.datasource.username=admin
-spring.datasource.password=Test@123 # Set via environment variable in production
+spring.datasource.url=jdbc:postgresql://corporateproject-postgres.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:5432/corporateproject_db?sslmode=require&ssl=true&sslfactory=org.postgresql.ssl.DefaultJavaSSLFactory
+spring.datasource.username=pgadmin
+spring.datasource.password=Test@123  # Replace with your actual password or use environment variable
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate Settings for PostgreSQL
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+# ===============================
+# JPA & Hibernate Configuration
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-# Connection Pool Settings
-spring.datasource.hikari.connection-timeout=30000
+# ===============================
+# Connection Pool Settings (Recommended for RDS)
+# ===============================
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=2000000
-
-# Disable features not needed in tests
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-init-sql=SELECT 1
