--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
                       <version>17.4</version> <!-- or latest version -->
                 </dependency>
 		<dependency>
+                     <groupId>org.testcontainers</groupId>
+                     <artifactId>postgresql</artifactId>
+                     <version>1.19.3</version>
+                     <scope>test</scope>
+                </dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
