--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=bankapp
 # ===============================
 spring.datasource.url=jdbc:postgresql://corporateproject-postgres.cd0yoy806w7s.ap-south-1.rds.amazonaws.com:5432/corporateproject_db?sslmode=require&ssl=true&sslfactory=org.postgresql.ssl.DefaultJavaSSLFactory
 spring.datasource.username=pgadmin
-spring.datasource.password=Test@123  # Replace with your actual password or use environment variable
+spring.datasource.password=Test123!  # Replace with your actual password or use environment variable
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
