--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
                         <artifactId>h2</artifactId>
                         <scope>test</scope>
                  </dependency>
+		<dependency>
+                       <groupId>org.postgresql</groupId>
+                       <artifactId>postgresql</artifactId>
+                       <version>42.3.5</version>  <!-- Ensure this is the latest version -->
+                </dependency>
+
                  <dependency>
                        <groupId>org.testcontainers</groupId>
                        <artifactId>mysql</artifactId>
